src/tests/e2e/alias_aucun_message_erreur.txt
ENTRYPOINT DEBUG ACTIVE: src/shtest_compiler/shtest.py loaded
[DEBUG] Loaded patterns: ['step', 'action_result', 'action_only', 'result_only', 'comment']
[DEBUG] Pattern for step: ^(?:Étape|Etape|Step)\s*:\s*(.*)$
[DEBUG] Pattern for action_result: ^Action\s*:\s*(.*?)(?:\s*;\s*(?:R[ée]sultat|Resultat)\s*:\s*(.*)|\s*R[ée]sultat\s*:\s*(.*))$
[DEBUG] Pattern for action_only: ^Action\s*:\s*(.*)$
[DEBUG] Pattern for result_only: ^R[ée]sultat\s*:\s*(.*)$
[DEBUG] Pattern for comment: ^\s*#.*$
[DEBUG] Added STEP tokenizer with pattern: ^(?:Étape|Etape|Step)\s*:\s*(.*)$
[DEBUG] Added ACTION_RESULT tokenizer with pattern: ^Action\s*:\s*(.*?)(?:\s*;\s*(?:R[ée]sultat|Resultat)\s*:\s*(.*)|\s*R[ée]sultat\s*:\s*(.*))$
[DEBUG] Added ACTION_ONLY tokenizer with pattern: ^Action\s*:\s*(.*)$
[DEBUG] Added RESULT_ONLY tokenizer with pattern: ^R[ée]sultat\s*:\s*(.*)$
[DEBUG] Added COMMENT tokenizer with pattern: ^\s*#.*$
[DEBUG] Added FallbackTokenizer
[DEBUG] Parsing text with 2 lines
[DEBUG] Lexing text with 2 lines
[DEBUG] RegexTokenizer.tokenize: Yielding TEXT token value=Action: Vérifier qu'il n'y a pas d'erreur ; Résultat: stderr=. at line 1
[DEBUG] RegexTokenizer.tokenize: Yielding token type=TokenType.ACTION_RESULT, value=Vérifier qu'il n'y a pas d'erreur, result=("Vérifier qu'il n'y a pas d'erreur", 'stderr=.', None), original=Action: Vérifier qu'il n'y a pas d'erreur ; Résultat: stderr=. at line 1
[DEBUG] Yielding token: ACTION_RESULT@1:0 'Vérifier qu'il n'y a pas d'erreur' -> '("Vérifier qu'il n'y a pas d'erreur", 'stderr=.', None)'
[DEBUG] RegexTokenizer.tokenize: Yielding TEXT token value=Action: Vérifier qu'il n'y a pas d'erreur ; Résultat: aucun message d'erreur. at line 1
[DEBUG] RegexTokenizer.tokenize: Yielding token type=TokenType.ACTION_RESULT, value=Vérifier qu'il n'y a pas d'erreur, result=("Vérifier qu'il n'y a pas d'erreur", "aucun message d'erreur.", None), original=Action: Vérifier qu'il n'y a pas d'erreur ; Résultat: aucun message d'erreur. at line 1
[DEBUG] Yielding token: ACTION_RESULT@1:0 'Vérifier qu'il n'y a pas d'erreur' -> '("Vérifier qu'il n'y a pas d'erreur", "aucun message d'erreur.", None)'
[DEBUG] RegexTokenizer.tokenize: Yielding EMPTY token at line 1
[DEBUG] Yielding token: EMPTY@1:0 ''
[DEBUG] Got 3 tokens
[DEBUG] Grammar: _merge_action_result called with 3 tokens
[DEBUG] Grammar: Token 0: kind=ACTION_RESULT, value='Vérifier qu'il n'y a pas d'erreur'
[DEBUG] Grammar: Token 1: kind=ACTION_RESULT, value='Vérifier qu'il n'y a pas d'erreur'
[DEBUG] Grammar: Token 2: kind=EMPTY, value=''
[DEBUG] Grammar: _merge_action_result returning 3 tokens
[DEBUG] compile_atomic called with: expected='stderr=', varname='result', last_file_var=None, extracted_args=None, action_context={'command': "Vérifier qu'il n'y a pas d'erreur"}
[DEBUG] canonize_validation result: None
[ERROR] ValidationParseError: No matcher found for validation: 'stderr='
Traceback (most recent call last):
  File "C:\Users\Sventer\OneDrive\Documents\batch testing\src\shtest_compiler\compiler\shell_generator.py", line 316, in visit
    shellframework_ast = ShtestToShellFrameworkVisitor().visit(node)
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sventer\OneDrive\Documents\batch testing\src\shtest_compiler\ast\visitor.py", line 23, in visit
    return visitor_method(node)
           ^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sventer\OneDrive\Documents\batch testing\src\shtest_compiler\ast\shtest_to_shellframework_visitor.py", line 49, in visit_shtestfile
    lines = compile_atomic(action.result_expr, varname="result", last_file_var=None, action_context={'command': action.command})
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sventer\OneDrive\Documents\batch testing\src\shtest_compiler\compiler\atomic_compiler.py", line 25, in compile_atomic
    raise ValidationParseError(f"No matcher found for validation: '{expected}'")
shtest_compiler.core.errors.ValidationParseError: No matcher found for validation: 'stderr='

Compiled C:\Users\Sventer\OneDrive\Documents\batch testing\src\tests\to_implement\alias_aucun_message_erreur.shtest -> C:\Users\Sventer\OneDrive\Documents\batch testing\src\tests\to_implement\alias_aucun_message_erreur.sh
